DOMjudge Programming Contest Judging System

Version 2.0.1 - SVN
-------------------
 - Make etc/generate_config.sh and judge/run use !/bin/bash, since they
   use bash-specific features and will break on a /bin/sh != bash system.
 - Fix notice on scoreboard when SHOW_AFFILIATIONS=1 but team_affiliations
   table empty. Thanks Maks Verver.
 - Drop obsolete style definition.

Version 2.0.0 - 23 July 2007
----------------------------
 - Use correct last modified date of team manual (Closes: #1744121).
 - Allow to set a specific new password for a team (Closes: #1737142).
 - Split general functions from submitcommon.cc to lib.misc.c and
   improved makefile structure and build process under Cygwin.
 - Replaced compare script by C program with better diff display.
 - Use AJAX instead of iframe to notify team/jury of new clarifications.
 - Added some security improvements to runguard.
 - Drop dependency on tempfile during distclean.
 - Fix compile errors/warnings in beep.c and compare.c (Closes: #1754218).
 - Improve runssh_* robustness.
 - Fix team unread clarification count to work cross-contest.

Version 2.0.0 Release Candidate 2 - 25 June 2007
------------------------------------------------
 - A shared file system between judgehosts and jury system is no
   longer required. The source is now communicated via the database.
 - Merge judging information into submission page (Closes: #1741620).
 - Improved portability to non-Linux systems (Closes: #1734046).
 - Use syntax highlighting in source code viewer when PEAR
   Text_Highlighter class is available.
 - Generated passwords only lowercase and length 6 (Closes: #1737142).
 - Split test-sources in normal and stress tests (Closes: #1737421).
 - Remove 'NOW()' from SQL update/insert queries to make replication
   time-independent.
 - Fixed bug in submit_db: report errors before too-late submission.
 - Fix bug in diff display when no newline present (Closes: #1741625).